# mediclaw-system

./: .gitignore  CLAUDE.md  Makefile  README.md  notes.md
django-api/: .dockerignore  .env.example  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Plano-MVP.md  README.md  manage.py  migrate_collection.py  pyproject.toml  requirements.txt
django-api/.claude/: settings.json
django-api/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
django-api/apps/accounts/: models.py  serializers.py  urls.py  views.py
django-api/apps/ai_engine/: guardrails.py  orchestrator.py  prompts.py
django-api/apps/audit/: urls.py
django-api/apps/common/: apps.py  authentication.py  exceptions.py  health_urls.py  logging_config.py  middleware.py  permissions.py  renderers.py  views.py
django-api/apps/conversations/: models.py  serializers.py  urls.py  views.py
django-api/apps/health_logs/: models.py  serializers.py  urls.py  views.py
django-api/apps/patients/: models.py  serializers.py  urls.py  views.py
django-api/apps/rag/: ingestion.py  models.py  retriever.py  telemetry_noop.py  urls.py  vector_store.py  views.py
django-api/chroma_data/9beeaf98-eab8-497f-9425-cdfce17bf48c/: index_metadata.pickle
django-api/config/: asgi.py  settings.py  urls.py  wsgi.py
django-api/notes/: evolucao-projeto.md  notes.md  prompts.md  roteiro-apresentacao.md  tarefas-trabalho-final.md
django-api/notes/apresentacao/: index.html
django-api/specs/: PRD.md
django-api/specs/epics/: epic-3-core-api.md  epic-4-ai-engine.md  epic-5-rag.md  (+4 more)
django-api/tests/: conftest.py
(+128 files in other folders)
