[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[project]
name = "django-api"
version = "0.1.0"
description = "MedicLaw Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django==5.2.1",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.0",
    "psycopg[binary]==3.2.13",
    "python-dotenv==1.1.0",
    "django-cors-headers==4.7.0",
    "pre-commit==4.2.0",
    "black==25.1.0",
    "pypdf>=4.0",
    "pydantic>=2.7",
    "chromadb==0.5.*",
    "langchain==0.3.*",
    "langchain-openai==0.3.*",
    "langchain-google-genai==2.*",
    "langchain-community==0.3.*",
    "openai>=1.30",
    "google-genai>=1.0",
    "uvicorn[standard]>=0.30",
    "pytest==8.*",
    "pytest-django==4.*",
    "freezegun>=1.5.0",
    "drf-yasg==1.21.15",
]
